// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Input / Select 300px width 1`] = `
Array [
  .c0 {
  display: none;
}

<select
    className="c0"
  >
    <option
      label="Select account"
      selected={true}
      value=""
    />
    <option
      label="First account"
      value="1"
    />
    <option
      label="Second acc 2"
      value="2"
    />
    <option
      label="Third 3"
      value="3"
    />
  </select>,
  .c9 {
  padding-left: 8px;
  padding-right: 8px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c3 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c12 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  width: 300px;
  display: inline-block;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  padding: 0;
  text-align: initial;
}

.c8,
.c8[type='button'],
.c8[type='reset'],
.c8[type='submit'] {
  -webkit-appearance: button;
}

.c8::-moz-focus-inner,
.c8[type='button']::-moz-focus-inner,
.c8[type='reset']::-moz-focus-inner,
.c8[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c8:-moz-focusring,
.c8[type='button']:-moz-focusring,
.c8[type='reset']:-moz-focusring,
.c8[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c11 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c0 {
  position: relative;
  display: inline-block;
  width: initial;
}

.c5 {
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  position: relative;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus-within {
  border-color: #0046FF;
}

.c5.focus-within {
  border-color: #0046FF;
}

<div
    className="c0"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        width="300px"
      >
        <label
          className="c3"
          hidden={false}
        >
          <span
            className="c4"
          >
            User account 
            <div
              className="c5"
              label="User account"
              onChange={[Function]}
              placeholder="Select account"
              width="300px"
            >
              <div
                className="c6"
              >
                <span
                  className="c7"
                >
                  <button
                    absolutePositioning={true}
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    className="c8"
                    form=""
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <div
                      aria-hidden="true"
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <div
                        className="c9"
                      >
                        Select account
                      </div>
                    </div>
                  </button>
                  <div
                    className="c10"
                  >
                    Select account
                  </div>
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="c11 c12"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                size={5}
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </div>
          </span>
        </label>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Molecules | Input / Select Accessible from document.forms 1`] = `
.c10 {
  padding-left: 8px;
  padding-right: 8px;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c4 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c13 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  width: 200px;
  display: inline-block;
}

.c9 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  padding: 0;
  text-align: initial;
}

.c9,
.c9[type='button'],
.c9[type='reset'],
.c9[type='submit'] {
  -webkit-appearance: button;
}

.c9::-moz-focus-inner,
.c9[type='button']::-moz-focus-inner,
.c9[type='reset']::-moz-focus-inner,
.c9[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c9:-moz-focusring,
.c9[type='button']:-moz-focusring,
.c9[type='reset']:-moz-focusring,
.c9[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c12 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c1 {
  position: relative;
  display: inline-block;
  width: initial;
}

.c6 {
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  position: relative;
}

.c6:hover {
  border-color: #4B4B46;
}

.c6:focus-within {
  border-color: #0046FF;
}

.c6.focus-within {
  border-color: #0046FF;
}

.c0 {
  display: none;
}

<form
  name="testForm"
>
  <select
    className="c0"
    name="mySelect"
  >
    <option
      label="Select account"
      selected={true}
      value=""
    />
    <option
      label="First account"
      value="1"
    />
    <option
      label="Second acc 2"
      value="2"
    />
    <option
      label="Third 3"
      value="3"
    />
  </select>
  <div
    className="c1"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <label
          className="c4"
          hidden={false}
        >
          <span
            className="c5"
          >
            User account 
            <div
              className="c6"
              label="User account"
              name="mySelect"
              onChange={[Function]}
              placeholder="Select account"
            >
              <div
                className="c7"
              >
                <span
                  className="c8"
                >
                  <button
                    absolutePositioning={true}
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    className="c9"
                    form=""
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <div
                      aria-hidden="true"
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <div
                        className="c10"
                      >
                        Select account
                      </div>
                    </div>
                  </button>
                  <div
                    className="c11"
                  >
                    Select account
                  </div>
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="c12 c13"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                size={5}
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </div>
          </span>
        </label>
      </div>
    </div>
  </div>
  <br />
  Value in form: "
  "
</form>
`;

exports[`Storyshots Molecules | Input / Select Controlled 1`] = `
Array [
  .c0 {
  display: none;
}

<select
    className="c0"
  >
    <option
      label="Select me"
      selected={true}
      value=""
    />
    <option
      label="1"
      value={1}
    />
    <option
      label="2"
      value={2}
    />
    <option
      label="3"
      value={3}
    />
  </select>,
  .c9 {
  padding-left: 8px;
  padding-right: 8px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c3 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c12 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  width: 200px;
  display: inline-block;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  padding: 0;
  text-align: initial;
}

.c8,
.c8[type='button'],
.c8[type='reset'],
.c8[type='submit'] {
  -webkit-appearance: button;
}

.c8::-moz-focus-inner,
.c8[type='button']::-moz-focus-inner,
.c8[type='reset']::-moz-focus-inner,
.c8[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c8:-moz-focusring,
.c8[type='button']:-moz-focusring,
.c8[type='reset']:-moz-focusring,
.c8[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c11 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c0 {
  position: relative;
  display: inline-block;
  width: initial;
}

.c5 {
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  position: relative;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus-within {
  border-color: #0046FF;
}

.c5.focus-within {
  border-color: #0046FF;
}

<div
    className="c0"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <label
          className="c3"
          hidden={false}
        >
          <span
            className="c4"
          >
            Can select only #2 
            <div
              className="c5"
              label="Can select only #2"
              onChange={[Function]}
              placeholder="Select me"
              value={Array []}
            >
              <div
                className="c6"
              >
                <span
                  className="c7"
                >
                  <button
                    absolutePositioning={true}
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    className="c8"
                    form=""
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <div
                      aria-hidden="true"
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <div
                        className="c9"
                      >
                        Select me
                      </div>
                    </div>
                  </button>
                  <div
                    className="c10"
                  >
                    Select me
                  </div>
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="c11 c12"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                size={5}
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </div>
          </span>
        </label>
      </div>
    </div>
  </div>,
  .c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #0046FF;
  padding: 4px 12px;
  min-height: 32px;
  color: #FFFFFF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c0,
.c0[type='button'],
.c0[type='reset'],
.c0[type='submit'] {
  -webkit-appearance: button;
}

.c0::-moz-focus-inner,
.c0[type='button']::-moz-focus-inner,
.c0[type='reset']::-moz-focus-inner,
.c0[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0:-moz-focusring,
.c0[type='button']:-moz-focusring,
.c0[type='reset']:-moz-focusring,
.c0[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0:hover {
  background-color: hsl(223.5,100%,45%);
}

.c0:active {
  background-color: hsl(223.5,100%,40%);
}

.c0::before {
  content: '';
  display: block;
  border: 2px solid transparent;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

<button
    className="c0"
    onClick={[Function]}
    type="button"
  >
    <span
      className="c1"
    >
      Select 1st
    </span>
  </button>,
]
`;

exports[`Storyshots Molecules | Input / Select Custom ListItem renderer 1`] = `
Array [
  .c0 {
  display: none;
}

<select
    className="c0"
  >
    <option
      label="Select account"
      selected={true}
      value=""
    />
    <option
      label="First account"
      value="1"
    />
    <option
      label="Second acc 2"
      value="2"
    />
    <option
      label="Third 3"
      value="3"
    />
  </select>,
  .c9 {
  padding-left: 8px;
  padding-right: 8px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c3 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c12 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  width: 200px;
  display: inline-block;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  padding: 0;
  text-align: initial;
}

.c8,
.c8[type='button'],
.c8[type='reset'],
.c8[type='submit'] {
  -webkit-appearance: button;
}

.c8::-moz-focus-inner,
.c8[type='button']::-moz-focus-inner,
.c8[type='reset']::-moz-focus-inner,
.c8[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c8:-moz-focusring,
.c8[type='button']:-moz-focusring,
.c8[type='reset']:-moz-focusring,
.c8[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c11 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c0 {
  position: relative;
  display: inline-block;
  width: initial;
}

.c5 {
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  position: relative;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus-within {
  border-color: #0046FF;
}

.c5.focus-within {
  border-color: #0046FF;
}

<div
    className="c0"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <label
          className="c3"
          hidden={false}
        >
          <span
            className="c4"
          >
            Open me 
            <div
              className="c5"
              label="Open me"
              onChange={[Function]}
              placeholder="Select account"
            >
              <div
                className="c6"
              >
                <span
                  className="c7"
                >
                  <button
                    absolutePositioning={true}
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    className="c8"
                    form=""
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <div
                      aria-hidden="true"
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <div
                        className="c9"
                      >
                        Select account
                      </div>
                    </div>
                  </button>
                  <div
                    className="c10"
                  >
                    Select account
                  </div>
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="c11 c12"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                size={5}
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </div>
          </span>
        </label>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Molecules | Input / Select Custom SelectedValue and ListItem renderer 1`] = `
Array [
  .c0 {
  display: none;
}

<select
    className="c0"
  >
    <option
      label="Select account"
      selected={true}
      value=""
    />
    <option
      label="First account"
      value="1"
    />
    <option
      label="Second acc 2"
      value="2"
    />
    <option
      label="Third 3"
      value="3"
    />
  </select>,
  .c10 {
  padding-left: 8px;
  padding-right: 32px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c3 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c13 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  width: 200px;
  display: inline-block;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  padding: 0;
  text-align: initial;
}

.c8,
.c8[type='button'],
.c8[type='reset'],
.c8[type='submit'] {
  -webkit-appearance: button;
}

.c8::-moz-focus-inner,
.c8[type='button']::-moz-focus-inner,
.c8[type='reset']::-moz-focus-inner,
.c8[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c8:-moz-focusring,
.c8[type='button']:-moz-focusring,
.c8[type='reset']:-moz-focusring,
.c8[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c12 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c0 {
  position: relative;
  display: inline-block;
  width: initial;
}

.c5 {
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  position: relative;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus-within {
  border-color: #0046FF;
}

.c5.focus-within {
  border-color: #0046FF;
}

.c9 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    className="c0"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <label
          className="c3"
          hidden={false}
        >
          <span
            className="c4"
          >
            User account 
            <div
              className="c5"
              label="User account"
              onChange={[Function]}
              placeholder="Select account"
            >
              <div
                className="c6"
              >
                <span
                  className="c7"
                >
                  <button
                    absolutePositioning={true}
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    className="c8"
                    form=""
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <div
                      aria-hidden="true"
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <div
                        className="c9 c10"
                      >
                        Select account
                      </div>
                    </div>
                  </button>
                  <div
                    className="c11"
                  >
                    Select account
                  </div>
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="c12 c13"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                size={5}
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </div>
          </span>
        </label>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Molecules | Input / Select Custom SelectedValue renderer 1`] = `
Array [
  .c0 {
  display: none;
}

<select
    className="c0"
  >
    <option
      label="Select account"
      selected={true}
      value=""
    />
    <option
      label="First account"
      value="1"
    />
    <option
      label="Second acc 2"
      value="2"
    />
    <option
      label="Third 3"
      value="3"
    />
  </select>,
  .c10 {
  padding-left: 8px;
  padding-right: 32px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c3 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c13 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  width: 200px;
  display: inline-block;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  padding: 0;
  text-align: initial;
}

.c8,
.c8[type='button'],
.c8[type='reset'],
.c8[type='submit'] {
  -webkit-appearance: button;
}

.c8::-moz-focus-inner,
.c8[type='button']::-moz-focus-inner,
.c8[type='reset']::-moz-focus-inner,
.c8[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c8:-moz-focusring,
.c8[type='button']:-moz-focusring,
.c8[type='reset']:-moz-focusring,
.c8[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c12 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c0 {
  position: relative;
  display: inline-block;
  width: initial;
}

.c5 {
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  position: relative;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus-within {
  border-color: #0046FF;
}

.c5.focus-within {
  border-color: #0046FF;
}

.c9 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    className="c0"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <label
          className="c3"
          hidden={false}
        >
          <span
            className="c4"
          >
            Select something 
            <div
              className="c5"
              label="Select something"
              onChange={[Function]}
              placeholder="Select account"
            >
              <div
                className="c6"
              >
                <span
                  className="c7"
                >
                  <button
                    absolutePositioning={true}
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    className="c8"
                    form=""
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <div
                      aria-hidden="true"
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <div
                        className="c9 c10"
                      >
                        Select account
                      </div>
                    </div>
                  </button>
                  <div
                    className="c11"
                  >
                    Select account
                  </div>
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="c12 c13"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                size={5}
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </div>
          </span>
        </label>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Molecules | Input / Select Default 1`] = `
Array [
  .c0 {
  display: none;
}

<select
    className="c0"
  >
    <option
      label="Select account"
      selected={true}
      value=""
    />
    <option
      label="First account"
      value="1"
    />
    <option
      label="Second acc 2"
      value="2"
    />
    <option
      label="Third 3"
      value="3"
    />
  </select>,
  .c9 {
  padding-left: 8px;
  padding-right: 8px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c3 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c12 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  width: 200px;
  display: inline-block;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  padding: 0;
  text-align: initial;
}

.c8,
.c8[type='button'],
.c8[type='reset'],
.c8[type='submit'] {
  -webkit-appearance: button;
}

.c8::-moz-focus-inner,
.c8[type='button']::-moz-focus-inner,
.c8[type='reset']::-moz-focus-inner,
.c8[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c8:-moz-focusring,
.c8[type='button']:-moz-focusring,
.c8[type='reset']:-moz-focusring,
.c8[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c11 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c0 {
  position: relative;
  display: inline-block;
  width: initial;
}

.c5 {
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  position: relative;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus-within {
  border-color: #0046FF;
}

.c5.focus-within {
  border-color: #0046FF;
}

<div
    className="c0"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <label
          className="c3"
          hidden={false}
        >
          <span
            className="c4"
          >
            User account 
            <div
              className="c5"
              label="User account"
              onChange={[Function]}
              placeholder="Select account"
            >
              <div
                className="c6"
              >
                <span
                  className="c7"
                >
                  <button
                    absolutePositioning={true}
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    className="c8"
                    form=""
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <div
                      aria-hidden="true"
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <div
                        className="c9"
                      >
                        Select account
                      </div>
                    </div>
                  </button>
                  <div
                    className="c10"
                  >
                    Select account
                  </div>
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="c11 c12"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                size={5}
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </div>
          </span>
        </label>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Molecules | Input / Select Default variations 1`] = `
.c13 {
  padding-left: 8px;
  padding-right: 8px;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c14 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c7 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c16 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c19 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c21 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c6 {
  width: 200px;
  display: inline-block;
}

.c18 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  padding: 0;
  text-align: initial;
}

.c18,
.c18[type='button'],
.c18[type='reset'],
.c18[type='submit'] {
  -webkit-appearance: button;
}

.c18::-moz-focus-inner,
.c18[type='button']::-moz-focus-inner,
.c18[type='reset']::-moz-focus-inner,
.c18[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c18:-moz-focusring,
.c18[type='button']:-moz-focusring,
.c18[type='reset']:-moz-focusring,
.c18[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c12 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: #EBEBE8;
  width: 100%;
  height: 100%;
  cursor: not-allowed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  padding: 0;
  text-align: initial;
}

.c12,
.c12[type='button'],
.c12[type='reset'],
.c12[type='submit'] {
  -webkit-appearance: button;
}

.c12::-moz-focus-inner,
.c12[type='button']::-moz-focus-inner,
.c12[type='reset']::-moz-focus-inner,
.c12[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c12:-moz-focusring,
.c12[type='button']:-moz-focusring,
.c12[type='reset']:-moz-focusring,
.c12[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c15 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c4 {
  position: relative;
  display: inline-block;
  width: initial;
}

.c20 {
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  position: relative;
}

.c20:hover {
  border-color: #4B4B46;
}

.c20:focus-within {
  border-color: #0046FF;
}

.c20.focus-within {
  border-color: #0046FF;
}

.c9 {
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  position: relative;
}

.c9:focus-within {
  border-color: #0046FF;
}

.c9.focus-within {
  border-color: #0046FF;
}

.c17 {
  height: 40px;
  outline: none;
  border: 1px solid #FF1900;
  position: relative;
  position: relative;
}

.c17:hover {
  border-color: #4B4B46;
}

.c17:focus-within {
  border-color: #0046FF;
}

.c17.focus-within {
  border-color: #0046FF;
}

.c22 {
  height: 40px;
  outline: none;
  border: 1px solid #00D200;
  position: relative;
  position: relative;
}

.c22:hover {
  border-color: #4B4B46;
}

.c22:focus-within {
  border-color: #0046FF;
}

.c22.focus-within {
  border-color: #0046FF;
}

.c3 {
  display: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Disabled
    </div>
    <div>
      <select
        className="c3"
        disabled={true}
      >
        <option
          label="Select account"
          selected={true}
          value=""
        />
        <option
          label="First account"
          value="1"
        />
        <option
          label="Second acc 2"
          value="2"
        />
        <option
          label="Third 3"
          value="3"
        />
      </select>
      <div
        className="c4"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <label
              className="c7"
              hidden={false}
            >
              <span
                className="c8"
              >
                User account 
                <div
                  className="c9"
                  disabled={true}
                  label="User account"
                  placeholder="Select account"
                >
                  <div
                    className="c10"
                  >
                    <span
                      className="c11"
                    >
                      <button
                        absolutePositioning={true}
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        className="c12"
                        disabled={true}
                        form=""
                        onClick={[Function]}
                        tabIndex={0}
                        type="button"
                      >
                        <div
                          aria-hidden="true"
                          style={
                            Object {
                              "flex": 1,
                            }
                          }
                        >
                          <div
                            className="c13"
                          >
                            Select account
                          </div>
                        </div>
                      </button>
                      <div
                        className="c14"
                      >
                        Select account
                      </div>
                    </span>
                  </div>
                  <svg
                    aria-hidden="true"
                    className="c15 c16"
                    focusable="false"
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    size={5}
                    viewBox="0 0 24 24"
                  >
                    <polygon
                      points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                    />
                  </svg>
                </div>
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Error
    </div>
    <div>
      <select
        className="c3"
      >
        <option
          label="Select account"
          selected={true}
          value=""
        />
        <option
          label="First account"
          value="1"
        />
        <option
          label="Second acc 2"
          value="2"
        />
        <option
          label="Third 3"
          value="3"
        />
      </select>
      <div
        className="c4"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <label
              className="c7"
              hidden={false}
            >
              <span
                className="c8"
              >
                User account 
                <div
                  className="c17"
                  label="User account"
                  placeholder="Select account"
                >
                  <div
                    className="c10"
                  >
                    <span
                      className="c11"
                    >
                      <button
                        absolutePositioning={true}
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        className="c18"
                        form=""
                        onClick={[Function]}
                        tabIndex={0}
                        type="button"
                      >
                        <div
                          aria-hidden="true"
                          style={
                            Object {
                              "flex": 1,
                            }
                          }
                        >
                          <div
                            className="c13"
                          >
                            Select account
                          </div>
                        </div>
                      </button>
                      <div
                        className="c14"
                      >
                        Select account
                      </div>
                    </span>
                  </div>
                  <svg
                    aria-hidden="true"
                    className="c15 c16"
                    focusable="false"
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    size={5}
                    viewBox="0 0 24 24"
                  >
                    <polygon
                      points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                    />
                  </svg>
                </div>
              </span>
            </label>
            <div>
              <span
                className="c19"
              >
                <div
                  className="c14"
                >
                  Error: 
                </div>
                Some error
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Info
    </div>
    <div>
      <select
        className="c3"
      >
        <option
          label="Select account"
          selected={true}
          value=""
        />
        <option
          label="First account"
          value="1"
        />
        <option
          label="Second acc 2"
          value="2"
        />
        <option
          label="Third 3"
          value="3"
        />
      </select>
      <div
        className="c4"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <label
              className="c7"
              hidden={false}
            >
              <span
                className="c8"
              >
                User account 
                <div
                  className="c20"
                  label="User account"
                  placeholder="Select account"
                >
                  <div
                    className="c10"
                  >
                    <span
                      className="c11"
                    >
                      <button
                        absolutePositioning={true}
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        className="c18"
                        form=""
                        onClick={[Function]}
                        tabIndex={0}
                        type="button"
                      >
                        <div
                          aria-hidden="true"
                          style={
                            Object {
                              "flex": 1,
                            }
                          }
                        >
                          <div
                            className="c13"
                          >
                            Select account
                          </div>
                        </div>
                      </button>
                      <div
                        className="c14"
                      >
                        Select account
                      </div>
                    </span>
                  </div>
                  <svg
                    aria-hidden="true"
                    className="c15 c16"
                    focusable="false"
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    size={5}
                    viewBox="0 0 24 24"
                  >
                    <polygon
                      points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                    />
                  </svg>
                </div>
              </span>
            </label>
            <div>
              <span
                className="c21"
              >
                Some extra info
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Success
    </div>
    <div>
      <select
        className="c3"
      >
        <option
          label="Select account"
          selected={true}
          value=""
        />
        <option
          label="First account"
          value="1"
        />
        <option
          label="Second acc 2"
          value="2"
        />
        <option
          label="Third 3"
          value="3"
        />
      </select>
      <div
        className="c4"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <label
              className="c7"
              hidden={false}
            >
              <span
                className="c8"
              >
                User account 
                <div
                  className="c22"
                  label="User account"
                  placeholder="Select account"
                >
                  <div
                    className="c10"
                  >
                    <span
                      className="c11"
                    >
                      <button
                        absolutePositioning={true}
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        className="c18"
                        form=""
                        onClick={[Function]}
                        tabIndex={0}
                        type="button"
                      >
                        <div
                          aria-hidden="true"
                          style={
                            Object {
                              "flex": 1,
                            }
                          }
                        >
                          <div
                            className="c13"
                          >
                            Select account
                          </div>
                        </div>
                      </button>
                      <div
                        className="c14"
                      >
                        Select account
                      </div>
                    </span>
                  </div>
                  <svg
                    aria-hidden="true"
                    className="c15 c16"
                    focusable="false"
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    size={5}
                    viewBox="0 0 24 24"
                  >
                    <polygon
                      points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                    />
                  </svg>
                </div>
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Select Full width 1`] = `
Array [
  .c0 {
  display: none;
}

<select
    className="c0"
  >
    <option
      label="Select account"
      selected={true}
      value=""
    />
    <option
      label="First account"
      value="1"
    />
    <option
      label="Second acc 2"
      value="2"
    />
    <option
      label="Third 3"
      value="3"
    />
  </select>,
  .c9 {
  padding-left: 8px;
  padding-right: 8px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c3 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c12 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  width: 200px;
  display: inline-block;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  padding: 0;
  text-align: initial;
}

.c8,
.c8[type='button'],
.c8[type='reset'],
.c8[type='submit'] {
  -webkit-appearance: button;
}

.c8::-moz-focus-inner,
.c8[type='button']::-moz-focus-inner,
.c8[type='reset']::-moz-focus-inner,
.c8[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c8:-moz-focusring,
.c8[type='button']:-moz-focusring,
.c8[type='reset']:-moz-focusring,
.c8[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c11 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c0 {
  position: relative;
  display: inline-block;
  width: 100%;
}

.c5 {
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  position: relative;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus-within {
  border-color: #0046FF;
}

.c5.focus-within {
  border-color: #0046FF;
}

<div
    className="c0"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c1"
      width="100%"
    >
      <div
        className="c2"
      >
        <label
          className="c3"
          hidden={false}
        >
          <span
            className="c4"
          >
            User account 
            <div
              className="c5"
              label="User account"
              onChange={[Function]}
              placeholder="Select account"
            >
              <div
                className="c6"
              >
                <span
                  className="c7"
                >
                  <button
                    absolutePositioning={true}
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    className="c8"
                    form=""
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <div
                      aria-hidden="true"
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <div
                        className="c9"
                      >
                        Select account
                      </div>
                    </div>
                  </button>
                  <div
                    className="c10"
                  >
                    Select account
                  </div>
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="c11 c12"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                size={5}
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </div>
          </span>
        </label>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Molecules | Input / Select Link with dropdown and search box 1`] = `
Array [
  .c0 {
  display: none;
}

<select
    className="c0"
  >
    <option
      label="Select account"
      selected={true}
      value=""
    />
    <option
      label="First account"
      value="1"
    />
    <option
      label="Second acc 2"
      value="2"
    />
    <option
      label="Third 3"
      value="3"
    />
    <option
      label="First account0.421"
      value="10.421"
    />
    <option
      label="Second acc 20.421"
      value="20.421"
    />
    <option
      label="Third 30.421"
      value="30.421"
    />
    <option
      label="First account0.421"
      value="10.421"
    />
    <option
      label="Second acc 20.421"
      value="20.421"
    />
    <option
      label="Third 30.421"
      value="30.421"
    />
    <option
      label="First account0.421"
      value="10.421"
    />
    <option
      label="Second acc 20.421"
      value="20.421"
    />
    <option
      label="Third 30.421"
      value="30.421"
    />
  </select>,
  .c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c6 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c8 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: middle;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
}

.c4,
.c4[type='button'],
.c4[type='reset'],
.c4[type='submit'] {
  -webkit-appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0 {
  position: relative;
  display: inline-block;
  width: initial;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: inline;
  padding: 0;
  color: #0046FF;
  border: none;
  background: transparent;
  overflow: visible;
  -webkit-appearance: none !important;
  cursor: pointer;
  font-weight: inherit;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    className="c0"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <span
          className="c3"
        >
          <button
            absolutePositioning={false}
            aria-expanded="false"
            aria-haspopup="listbox"
            className="c4"
            form=""
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              aria-hidden="true"
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <div
                className="c5"
                onClick={[Function]}
              >
                <div
                  className="c6"
                >
                  <svg
                    aria-hidden="true"
                    className="c7"
                    focusable="false"
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    size={5}
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 C5.372583,24 0,18.627417 0,12 C0,5.372583 5.372583,0 12,0 Z M12,2 C6.4771525,2 2,6.4771525 2,12 C2,17.5228475 6.4771525,22 12,22 C17.5228475,22 22,17.5228475 22,12 C22,6.4771525 17.5228475,2 12,2 Z M13,4 L13,11 L20,11 L20,13 L13,13 L13,20 L11,20 L11,12.999 L4,13 L4,11 L11,10.999 L11,4 L13,4 Z"
                    />
                  </svg>
                  Select account
                </div>
              </div>
            </div>
          </button>
          <div
            className="c8"
          >
            Select account
          </div>
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Molecules | Input / Select Size = \`s\` variations 1`] = `
.c13 {
  padding-left: 8px;
  padding-right: 8px;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c14 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c7 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c16 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c19 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c21 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c6 {
  width: 200px;
  display: inline-block;
}

.c18 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  padding: 0;
  text-align: initial;
}

.c18,
.c18[type='button'],
.c18[type='reset'],
.c18[type='submit'] {
  -webkit-appearance: button;
}

.c18::-moz-focus-inner,
.c18[type='button']::-moz-focus-inner,
.c18[type='reset']::-moz-focus-inner,
.c18[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c18:-moz-focusring,
.c18[type='button']:-moz-focusring,
.c18[type='reset']:-moz-focusring,
.c18[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c12 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: #EBEBE8;
  width: 100%;
  height: 100%;
  cursor: not-allowed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  padding: 0;
  text-align: initial;
}

.c12,
.c12[type='button'],
.c12[type='reset'],
.c12[type='submit'] {
  -webkit-appearance: button;
}

.c12::-moz-focus-inner,
.c12[type='button']::-moz-focus-inner,
.c12[type='reset']::-moz-focus-inner,
.c12[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c12:-moz-focusring,
.c12[type='button']:-moz-focusring,
.c12[type='reset']:-moz-focusring,
.c12[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c15 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c4 {
  position: relative;
  display: inline-block;
  width: initial;
}

.c9 {
  height: 32px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  position: relative;
}

.c9:focus-within {
  border-color: #0046FF;
}

.c9.focus-within {
  border-color: #0046FF;
}

.c17 {
  height: 32px;
  outline: none;
  border: 1px solid #FF1900;
  position: relative;
  position: relative;
}

.c17:hover {
  border-color: #4B4B46;
}

.c17:focus-within {
  border-color: #0046FF;
}

.c17.focus-within {
  border-color: #0046FF;
}

.c20 {
  height: 32px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  position: relative;
}

.c20:hover {
  border-color: #4B4B46;
}

.c20:focus-within {
  border-color: #0046FF;
}

.c20.focus-within {
  border-color: #0046FF;
}

.c22 {
  height: 32px;
  outline: none;
  border: 1px solid #00D200;
  position: relative;
  position: relative;
}

.c22:hover {
  border-color: #4B4B46;
}

.c22:focus-within {
  border-color: #0046FF;
}

.c22.focus-within {
  border-color: #0046FF;
}

.c3 {
  display: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Disabled
    </div>
    <div>
      <select
        className="c3"
        disabled={true}
      >
        <option
          label="Select account"
          selected={true}
          value=""
        />
        <option
          label="First account"
          value="1"
        />
        <option
          label="Second acc 2"
          value="2"
        />
        <option
          label="Third 3"
          value="3"
        />
      </select>
      <div
        className="c4"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <label
              className="c7"
              hidden={false}
            >
              <span
                className="c8"
              >
                User account 
                <div
                  className="c9"
                  disabled={true}
                  label="User account"
                  placeholder="Select account"
                  size="s"
                >
                  <div
                    className="c10"
                  >
                    <span
                      className="c11"
                    >
                      <button
                        absolutePositioning={true}
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        className="c12"
                        disabled={true}
                        form=""
                        onClick={[Function]}
                        tabIndex={0}
                        type="button"
                      >
                        <div
                          aria-hidden="true"
                          style={
                            Object {
                              "flex": 1,
                            }
                          }
                        >
                          <div
                            className="c13"
                          >
                            Select account
                          </div>
                        </div>
                      </button>
                      <div
                        className="c14"
                      >
                        Select account
                      </div>
                    </span>
                  </div>
                  <svg
                    aria-hidden="true"
                    className="c15 c16"
                    focusable="false"
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    size={5}
                    viewBox="0 0 24 24"
                  >
                    <polygon
                      points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                    />
                  </svg>
                </div>
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Error
    </div>
    <div>
      <select
        className="c3"
      >
        <option
          label="Select account"
          selected={true}
          value=""
        />
        <option
          label="First account"
          value="1"
        />
        <option
          label="Second acc 2"
          value="2"
        />
        <option
          label="Third 3"
          value="3"
        />
      </select>
      <div
        className="c4"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <label
              className="c7"
              hidden={false}
            >
              <span
                className="c8"
              >
                User account 
                <div
                  className="c17"
                  label="User account"
                  placeholder="Select account"
                  size="s"
                >
                  <div
                    className="c10"
                  >
                    <span
                      className="c11"
                    >
                      <button
                        absolutePositioning={true}
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        className="c18"
                        form=""
                        onClick={[Function]}
                        tabIndex={0}
                        type="button"
                      >
                        <div
                          aria-hidden="true"
                          style={
                            Object {
                              "flex": 1,
                            }
                          }
                        >
                          <div
                            className="c13"
                          >
                            Select account
                          </div>
                        </div>
                      </button>
                      <div
                        className="c14"
                      >
                        Select account
                      </div>
                    </span>
                  </div>
                  <svg
                    aria-hidden="true"
                    className="c15 c16"
                    focusable="false"
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    size={5}
                    viewBox="0 0 24 24"
                  >
                    <polygon
                      points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                    />
                  </svg>
                </div>
              </span>
            </label>
            <div>
              <span
                className="c19"
              >
                <div
                  className="c14"
                >
                  Error: 
                </div>
                Some error
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Info
    </div>
    <div>
      <select
        className="c3"
      >
        <option
          label="Select account"
          selected={true}
          value=""
        />
        <option
          label="First account"
          value="1"
        />
        <option
          label="Second acc 2"
          value="2"
        />
        <option
          label="Third 3"
          value="3"
        />
      </select>
      <div
        className="c4"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <label
              className="c7"
              hidden={false}
            >
              <span
                className="c8"
              >
                User account 
                <div
                  className="c20"
                  label="User account"
                  placeholder="Select account"
                  size="s"
                >
                  <div
                    className="c10"
                  >
                    <span
                      className="c11"
                    >
                      <button
                        absolutePositioning={true}
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        className="c18"
                        form=""
                        onClick={[Function]}
                        tabIndex={0}
                        type="button"
                      >
                        <div
                          aria-hidden="true"
                          style={
                            Object {
                              "flex": 1,
                            }
                          }
                        >
                          <div
                            className="c13"
                          >
                            Select account
                          </div>
                        </div>
                      </button>
                      <div
                        className="c14"
                      >
                        Select account
                      </div>
                    </span>
                  </div>
                  <svg
                    aria-hidden="true"
                    className="c15 c16"
                    focusable="false"
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    size={5}
                    viewBox="0 0 24 24"
                  >
                    <polygon
                      points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                    />
                  </svg>
                </div>
              </span>
            </label>
            <div>
              <span
                className="c21"
              >
                Some extra info
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Success
    </div>
    <div>
      <select
        className="c3"
      >
        <option
          label="Select account"
          selected={true}
          value=""
        />
        <option
          label="First account"
          value="1"
        />
        <option
          label="Second acc 2"
          value="2"
        />
        <option
          label="Third 3"
          value="3"
        />
      </select>
      <div
        className="c4"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <label
              className="c7"
              hidden={false}
            >
              <span
                className="c8"
              >
                User account 
                <div
                  className="c22"
                  label="User account"
                  placeholder="Select account"
                  size="s"
                >
                  <div
                    className="c10"
                  >
                    <span
                      className="c11"
                    >
                      <button
                        absolutePositioning={true}
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        className="c18"
                        form=""
                        onClick={[Function]}
                        tabIndex={0}
                        type="button"
                      >
                        <div
                          aria-hidden="true"
                          style={
                            Object {
                              "flex": 1,
                            }
                          }
                        >
                          <div
                            className="c13"
                          >
                            Select account
                          </div>
                        </div>
                      </button>
                      <div
                        className="c14"
                      >
                        Select account
                      </div>
                    </span>
                  </div>
                  <svg
                    aria-hidden="true"
                    className="c15 c16"
                    focusable="false"
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    size={5}
                    viewBox="0 0 24 24"
                  >
                    <polygon
                      points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                    />
                  </svg>
                </div>
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Input / Select 🚧 Multiselect (WIP, don't use for now) 1`] = `
Array [
  .c0 {
  display: none;
}

<select
    className="c0"
  >
    <option
      label="Select account"
      selected={true}
      value=""
    />
    <option
      label="First account"
      value="1"
    />
    <option
      label="Second acc 2"
      value="2"
    />
    <option
      label="Third 3"
      value="3"
    />
  </select>,
  .c10 {
  padding-left: 8px;
  padding-right: 32px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c3 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c13 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  width: 200px;
  display: inline-block;
}

.c8 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  padding: 0;
  text-align: initial;
}

.c8,
.c8[type='button'],
.c8[type='reset'],
.c8[type='submit'] {
  -webkit-appearance: button;
}

.c8::-moz-focus-inner,
.c8[type='button']::-moz-focus-inner,
.c8[type='reset']::-moz-focus-inner,
.c8[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c8:-moz-focusring,
.c8[type='button']:-moz-focusring,
.c8[type='reset']:-moz-focusring,
.c8[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c12 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c0 {
  position: relative;
  display: inline-block;
  width: initial;
}

.c5 {
  height: 40px;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  position: relative;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus-within {
  border-color: #0046FF;
}

.c5.focus-within {
  border-color: #0046FF;
}

.c9 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    className="c0"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <label
          className="c3"
          hidden={false}
        >
          <span
            className="c4"
          >
            User account 
            <div
              className="c5"
              label="User account"
              onChange={[Function]}
              placeholder="Select account"
            >
              <div
                className="c6"
              >
                <span
                  className="c7"
                >
                  <button
                    absolutePositioning={true}
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    className="c8"
                    form=""
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <div
                      aria-hidden="true"
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <div
                        className="c9 c10"
                      >
                        Select account
                      </div>
                    </div>
                  </button>
                  <div
                    className="c11"
                  >
                    Select account
                  </div>
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="c12 c13"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                size={5}
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </div>
          </span>
        </label>
      </div>
    </div>
  </div>,
]
`;
